--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/mountain_beach_city" />
-
+        app:srcCompat="@drawable/travelandroid" />
+<!--app:srcCompat="@drawable/mountain_beach_city"-->
     <TextView
         android:id="@+id/textView66"
         android:layout_width="wrap_content"
