--- a/app/src/main/res/layout/activity_customer_list.xml
+++ b/app/src/main/res/layout/activity_customer_list.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customer.CustomerListActivity">
+
     <TextView
         android:id="@+id/textView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Customer"
+        android:text="Customers"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#015E50"
         app:layout_constraintStart_toStartOf="parent"
