--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -10,57 +10,67 @@
         android:id="@+id/textView66"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Product"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
+        android:text="Products"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#015E50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="40dp"
+        android:text="Suppliers"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#015E50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/lvProduct"
         style="@style/Widget.AppCompat.ListView.Menu"
-        android:layout_width="178dp"
-        android:layout_height="573dp"
+        android:layout_width="194dp"
+        android:layout_height="476dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
         android:background="#dfe6e1"
         android:headerDividersEnabled="true"
         android:minHeight="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.013"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView66" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.455" />
 
     <Button
         android:id="@+id/btnNewProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_width="191dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginBottom="4dp"
         android:background="#22a15f"
+        android:textColor="#FFFFFF"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#FFFFFF"
         android:text="Add New Product"
-        app:layout_constraintBottom_toBottomOf="@+id/textView66"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <fragment
         android:id="@+id/fragment2"
         android:name="com.example.day10_assignment_v1.product.ProductSuppliersListActivity"
-        android:layout_width="222dp"
-        android:layout_height="579dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="37dp"
+        android:layout_width="209dp"
+        android:layout_height="603dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lvProduct"
-        app:layout_constraintTop_toBottomOf="@+id/btnNewProduct" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
