--- a/app/src/main/res/layout/activity_product_suppliers_list.xml
+++ b/app/src/main/res/layout/activity_product_suppliers_list.xml
@@ -10,40 +10,46 @@
         android:id="@+id/textView77"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="122dp"
         android:layout_marginTop="16dp"
-        android:text="Suppliers"
+        android:layout_marginEnd="149dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#015E50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/lvSuppliers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="189dp"
+        android:layout_height="477dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="12dp"
         android:background="#dfe6e1"
         android:headerDividersEnabled="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnNewSupplier"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView77" />
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btnNewSupplier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_width="191dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="4dp"
         android:background="#22a15f"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textColor="#FFFFFF"
         android:text="Add New Supplier"
-        app:layout_constraintBottom_toBottomOf="@+id/textView77"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
